<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/medicineFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_medicines"/>

    <item
        android:id="@+id/vitalLogFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_vitals"/>

    <item
        android:id="@+id/ashaFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_asha"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile"/>

</menu>
